<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanduanActivity">


    <RelativeLayout
        android:id="@+id/bg_top_medis"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/toppanduan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onBackPressed"
            android:src="@drawable/vector"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="179.5dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="179.5dp"
            android:gravity="center"
            android:text="@string/panduan"
            android:textColor="#000000"
            android:textSize="20sp"></TextView>
    </RelativeLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="402dp"
        android:layout_height="62dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="@+id/bg_top_medis"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bg_top_medis" />

    <TextView
        android:id="@+id/textViewTitle1"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/textviewtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <TextView
        android:id="@+id/textViewTitle1Point1"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/textviewtitle1point1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle1" />

    <TextView
        android:id="@+id/textViewTitle1Point2"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="35dp"
        android:text="@string/textviewtitle1point2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle1Point1" />
    <TextView
        android:id="@+id/textViewTitle1Point3"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle1point3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle1Point2" />
    <TextView
        android:id="@+id/textViewTitle1Point4"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle1point4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle1Point3" />
    <TextView
        android:id="@+id/textViewTitle1Point5"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle1point5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle1Point4" />

    <TextView
        android:id="@+id/textViewTitle2"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle1Point5" />
    <TextView
        android:id="@+id/textViewTitle2Point1"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle2point1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle2" />
    <TextView
        android:id="@+id/textViewTitle2Point2"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle2point2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle2Point1" />
    <TextView
        android:id="@+id/textViewTitle2Point3"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle2point3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle2Point2" />

    <TextView
        android:id="@+id/textViewTitle3"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle2Point3" />
    <TextView
        android:id="@+id/textViewTitle3Point1"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle3point1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle3" />
    <TextView
        android:id="@+id/textViewTitle3Point2"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle3point2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle3Point1" />
    <TextView
        android:id="@+id/textViewTitle3Point3"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle3point3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle3Point2" />
    <TextView
        android:id="@+id/textViewTitle3Point4"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle3point4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle3Point3" />

    <TextView
        android:id="@+id/textViewTitle4"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle3Point4" />
    <TextView
        android:id="@+id/textViewTitle4Point1"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle4point1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle4" />
    <TextView
        android:id="@+id/textViewTitle4Point2"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle4point2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle4Point1" />
    <TextView
        android:id="@+id/textViewTitle4Point3"
        android:textColor="@color/black"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/textviewtitle4point3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle4Point2" />

</androidx.constraintlayout.widget.ConstraintLayout>